dev: added example of hello world angular

--- a/front/package.json
+++ b/front/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "angular": "^1.8.3",
+    "jquery": "^3.7.0"
+  }
 }
