--- a/front/package.json
+++ b/front/package.json
@@ -12,5 +12,9 @@
   "dependencies": {
     "angular": "^1.8.3",
     "jquery": "^3.7.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.85.1",
+    "webpack-cli": "^5.1.3"
   }
 }
