--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.7.0"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^5.5.1",
     "webpack": "^5.85.1",
     "webpack-cli": "^5.1.3"
   }
