--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "build:dev": "webpack --mode development"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +15,14 @@
     "jquery": "^3.7.0"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.1",
+    "style-loader": "^3.3.3",
     "webpack": "^5.85.1",
-    "webpack-cli": "^5.1.3"
+    "webpack-cli": "^5.1.3",
+    "webpack-dev-server": "^4.15.0"
   }
 }
