--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,8 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.6",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.85.1",
     "webpack-cli": "^5.1.3",
