--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --mode development",
     "build": "webpack",
     "build:dev": "webpack --mode development"
   },
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "angular": "^1.8.3",
+    "angular-route": "^1.8.3",
     "jquery": "^3.7.0"
   },
   "devDependencies": {
