--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack",
-    "build:dev": "webpack --mode development"
+    "build:dev": "webpack --mode development",
+    "e2e": "cypress open"
   },
   "keywords": [],
   "author": "",
