--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,8 @@
     "start": "webpack serve --mode development",
     "build": "webpack",
     "build:dev": "webpack --mode development",
-    "e2e": "cypress open"
+    "e2e": "cypress open",
+    "e2e:ci": "cypress run"
   },
   "keywords": [],
   "author": "",
